<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/etNomeDoCliente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Nome" />


    <EditText
        android:id="@+id/etTelefoneDoCliente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/telefone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/bEditarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:visibility="gone"
            android:onClick="editarCliente"
            />

        <Button
            android:id="@+id/btConfirmarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="salvarCliente"
            android:text="@string/cadastrar" />

        <Button
            android:id="@+id/bCancelarCadCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="fechar"
            android:text="@string/cancelar" />
    </LinearLayout>


</LinearLayout>